fix(components): change TaskPopup's inner gaps

--- a/src/components/task-popup/taskPopup.module.scss
+++ b/src/components/task-popup/taskPopup.module.scss
@@ -91,11 +91,8 @@
 .taskSection {
 	@include sectionStyles();
 
-	display: flex;
-	flex-direction: column;
-	gap: adaptValue(20, 15);
-
 	&__taskField {
+		margin-bottom: 20px;
 		@include rowStyles();
 
 		&>*:first-child {
@@ -116,9 +113,9 @@
 		padding-left: 2.5px;
 		display: flex;
 		flex-direction: column;
-		gap: adaptValue(17, 12);
 
 		li {
+			margin-bottom: 15px;
 			list-style: none;
 		}
 	}
@@ -134,6 +131,9 @@
 .steps {
 	@include rowStyles();
 	max-width: 100%;
+
+	padding-bottom: 7px;
+	border-bottom: 2px solid rgba(255, 255, 255, 0.15);
 
 	&>*:first-child {
 		flex: 0 0 auto;
@@ -195,7 +195,7 @@
 		border: none;
 		outline: none;
 
-		font-size: adaptValue(18, 16);
+		font-size: 16px;
 
 		&::placeholder {
 			color: $primaryTextColor;
